--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "generator-demo",
+  "name": "generator-vango",
   "version": "0.0.1",
-  "description": "A generator demo used by Yeoman",
+  "description": "A generator for Yeoman",
   "keywords": [
     "yeoman-generator",
-    "demo"
+    "vango"
   ],
-  "homepage": "https://github.com/upcwangying/generator-demo",
-  "bugs": "https://github.com/upcwangying/generator-demo/issues",
+  "homepage": "https://github.com/vangojs/generator-vango",
+  "bugs": "https://github.com/vangojs/generator-vango/issues",
   "author": {
     "name": "Ying Wang",
     "email": "upcwangying@gmail.com",
@@ -16,10 +16,13 @@
   "main": "app/index.js",
   "files": [
     "app",
-    "router"
+    "libs"
   ],
+  "scripts": {
+    "release": "standard-version"
+  },
   "license": "MIT",
-  "repository": "upcwangying/generator-demo",
+  "repository": "vangojs/generator-vango",
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged"
@@ -32,10 +35,11 @@
     ]
   },
   "dependencies": {
-    "yeoman-generator": "^1.0.0"
-  },
-  "peerDependencies": {
-    "yo": ">=1.0.0"
+    "chalk": "^3.0.0",
+    "mkdirp": "^0.5.1",
+    "run-async": "^2.3.0",
+    "yeoman-generator": "^4.2.0",
+    "yosay": "^2.0.2"
   },
   "engines": {
     "node": ">=8"
@@ -48,6 +52,7 @@
     "husky": "^3.1.0",
     "lint-staged": "^9.5.0",
     "mocha": "^6.2.2",
-    "prettier": "^1.19.1"
+    "prettier": "^1.19.1",
+    "standard-version": "^7.0.1"
   }
 }
