--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "node": ">=8"
   },
   "devDependencies": {
+    "babel-eslint": "^10.0.3",
     "eslint": "^6.7.2",
     "eslint-config-prettier": "^6.7.0",
     "eslint-plugin-import": "^2.18.2",
