--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-vango",
-  "version": "0.0.1",
+  "version": "0.0.2-alpha.0",
   "description": "A generator for Yeoman",
   "keywords": [
     "yeoman-generator",
@@ -35,9 +35,8 @@
     ]
   },
   "dependencies": {
+    "assert-plus": "^1.0.0",
     "chalk": "^3.0.0",
-    "mkdirp": "^0.5.1",
-    "run-async": "^2.3.0",
     "yeoman-generator": "^4.2.0",
     "yosay": "^2.0.2"
   },
@@ -54,6 +53,8 @@
     "lint-staged": "^9.5.0",
     "mocha": "^6.2.2",
     "prettier": "^1.19.1",
-    "standard-version": "^7.0.1"
+    "standard-version": "^7.0.1",
+    "yeoman-assert": "^3.1.1",
+    "yeoman-test": "^2.0.0"
   }
 }
