--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-vango",
-  "version": "0.0.0",
+  "version": "0.0.1-alpha.0",
   "description": "A generator for Yeoman",
   "keywords": [
     "yeoman-generator",
